# vid-prepper

./: README.md  liccheck.ini  main.py  pyproject.toml
.github/workflows/: ci.yml
docs/: README.md
docs/api/: overview.md
docs/tutorials/: getting_started.md
examples/: __init__.py  advanced_usage.py  basic_usage.py
src/vid_prepper/: __init.py__
tests/: __init__.py  test_augmentor.py  test_metadata.py
